Added Additional Notes and Admin Notes
